# kotkit-api

./: Dockerfile  alembic.ini  app_module.py  base_model.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
database/: env.py
database/versions/: 02ff40aea5b4_add_user_avatar.py  0569a5842a59_create_all_tables.py  7db0304c5610_create_all_tables.py
prisma/: dev.db  schema.prisma
src/auth/: auth_controller.py  auth_dto.py  auth_guards.py  auth_input.py  auth_module.py  auth_resolver.py  auth_service.py
src/auth/models/: token.py
src/comment/: comment_controller.py  comment_dto.py  comment_module.py  comment_service.py
src/comment/models/: comment_model.py
src/follow/: follow_controller.py  follow_dto.py  follow_module.py  follow_service.py
src/follow/models/: follow_model.py
src/like/: like_controller.py  like_dto.py  like_module.py  like_service.py
src/like/models/: like_model.py
src/user/: user_controller.py  user_dto.py  user_module.py  user_resolver.py  user_service.py
src/user/models/: user_model.py
src/video/: video_controller.py  video_dto.py  video_input.py  video_module.py  video_resolver.py  video_service.py
src/video/models/: video_model.py
