[tool.poetry]
name = "kotkit"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nestipy-jwt = "^0.1.1"
nestipy = "^0.5.3"
nestipy-prisma = "^0.1.2"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
