[tool.poetry]
name = "kotkit"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nestipy-jwt = "^0.1.1"
bcrypt = "^4.1.3"
nestipy-config = "^0.1.6"
asyncmy = "^0.2.9"
pymysql = "^1.1.1"
nestipy-alchemy = "^0.1.8"
strawberry-sqlalchemy-mapper = "^0.4.3"
nestipy = "^0.5.15"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
